# s6-mini-project-empart

./: .env  .gcloudignore  .gitignore  TODO.txt  admin_api.py  admin_form.py  app.py  data.py  db.py  hospital_form.py  hospital_login.py  main.py  pyproject.toml  requirements.txt  setup.py  staff_api.py  staff_form.py
static/: login.css  qr.js  signup.css  web.css
temp/templates/: 404.html  index.html  signup.html
templates/: add_hospital.html  admin_add_hosp.html  admin_dashboard.html  admin_hosp_search.html  admin_login.html  admin_setup.html  dashboard-nurse.html  delete_hospital.html  get_all_public_records.html  get_public_record.html  hospital_dashboard.html  hospital_login.html  index.html  login.html  new_pswd_hospital.html  new_pswd_staff.html  signup.html  staff_index.html  staff_login.html
